--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "^5.1.0",
+    "@react-native-picker/picker": "^2.2.1",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
     "react": "17.0.2",
@@ -17,8 +19,10 @@
     "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "^2.1.1",
     "react-native-linear-gradient": "^2.5.6",
+    "react-native-option-select": "^1.0.4",
     "react-native-safe-area-context": "^3.3.2",
-    "react-native-screens": "^3.10.1"
+    "react-native-screens": "^3.10.1",
+    "react-native-vector-icons": "^9.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
