--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native-option-select": "^1.0.4",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.10.1",
+    "react-native-sqlite-storage": "^6.0.1",
     "react-native-vector-icons": "^9.0.0"
   },
   "devDependencies": {
