--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -152,6 +152,12 @@ android {
             keyAlias 'androiddebugkey'
             keyPassword 'android'
         }
+        release {
+            storeFile file('medbaby.keystore')
+            storePassword '123456'
+            keyAlias 'medbaby'
+            keyPassword '123456'
+        }
     }
     buildTypes {
         debug {
@@ -165,6 +171,7 @@ android {
         release {
             // Caution! In production, you need to generate your own keystore file.
             // see https://reactnative.dev/docs/signed-apk-android.
+            signingConfig signingConfigs.release
             signingConfig signingConfigs.debug
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
